--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "bundle": "webpack"
   },
-  "author": "",
+  "author": "Anthony Jack",
   "license": "ISC",
   "devDependencies": {
     "angular": "^1.6.1",
